# metricq-source-modbus

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  dev.py  pyproject.toml  setup.cfg
.github/workflows/: docker.yml
metricq_source_example/: __init__.py  main.py  source.py
metricq_source_modbus/: config_model.py  main.py  read_strings.py  source.py
tests/: test_config.py
