[metadata]
name = metricq_source_example
version = file: .version
author = TU Dresden
description = An example source for MetricQ 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/metricq/metricq-source-example
license = BSD 3-clause "New" or "Revised License"
license_file = LICENSE
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3

[options]
packages =
    metricq_source_example
python_requires = >=3.10
install_requires =
    metricq ~= 5.2
    click
    click-completion
    click_log

[options.package_data]
metricq_source_example = py.typed

[options.entry_points]
console_scripts =
    metricq-source-example=metricq_source_example:run

[options.extras_require]
lint =
    black ~= 23.1.0
    flake8
    isort ~= 5.0
typing =
    mypy >= 1.3.0
    mypy-protobuf
    click-types
dev =
    %(lint)s
    %(typing)s

[flake8]
extend-exclude =
    build,
    .venv,
    venv
show-source = True
statistics = True
select =
    # Regular flake8 rules
    C, E, F, W
    # pep8-naming rules
    N
ignore =
    # E203: whitespace before ':' (not PEP8 compliant)
    E203
    # E501: line too long (black does that)
    E501
    # W503: line break before binary operator (not PEP8 compliant)
    W503

[tox:tox]
envlist =
    black
    isort
    mypy
    flake8

[testenv:black]
deps = .[lint]
commands = black --check .

[testenv:isort]
deps = .[lint]
commands = isort --diff --check .

[testenv:flake8]
deps = .[lint]
commands = flake8 .

[testenv:mypy]
deps = .[typing]
commands = mypy --strict metricq_source_example
